--- a/src/ui/TracNghiemRabbitMQ.FE/src/index.html
+++ b/src/ui/TracNghiemRabbitMQ.FE/src/index.html
@@ -23,7 +23,7 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-color: #F3F3FA;">
   <app-root></app-root>
 </body>
 
